--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
+authors = ["Flaymes"]
 name = "tcping"
 version = "0.1.0"
 edition = "2021"
+description = "A tcp ping tool"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.4.2"
+clap = { version = "4.4.2", features = ["derive"] }
